number slide sections

--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 	</section>
 
 	<section id="intro"
-		 data-markdown="markdown/intro.md"
+		 data-markdown="markdown/00-intro.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
 
 	<section id="why-ha"
-		 data-markdown="markdown/why-ha.md"
+		 data-markdown="markdown/01-why-ha.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
 
 	<section id="how-ha"
-		 data-markdown="markdown/how-ha.md"
+		 data-markdown="markdown/02-how-ha.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
 
 	<section id="suse-cloud-3"
-		 data-markdown="markdown/suse-cloud-3.md"
+		 data-markdown="markdown/03-suse-cloud-3.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
@@ -76,25 +76,25 @@
 	</section>
 
 	<section id="crowbar"
-		 data-markdown="markdown/crowbar.md"
+		 data-markdown="markdown/04-crowbar.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
 
 	<section id="pacemaker"
-		 data-markdown="markdown/pacemaker.md"
+		 data-markdown="markdown/05-pacemaker.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
 
 	<section id="nodes"
-		 data-markdown="markdown/nodes.md"
+		 data-markdown="markdown/06-nodes.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
 
 	<section id="test-ha"
-		 data-markdown="markdown/test-ha.md"
+		 data-markdown="markdown/07-test-ha.md"
 		 data-separator="^\n\n\n"
 		 data-vertical="^\n\n"
 		 data-notes="^Note:" ></section>
